# auto-captions

./: .gitignore  README.md  adjust_subtitles.py  main.py  pyproject.toml  requirements.txt  setup.sh  style_config.json  subtitles_generator.py  text_processor.py  text_to_speech.py  video_processor.py  whisper_align.py
assets/config/: style_config.json
datasources/: reddit.py
examples/: README.md  TTS_DEMO.md  __init__.py  example.py  examples.json  run.py
examples/assets/: text.txt
llm/: llama_cpp_manager.py
media_processors/: subtitles_generator.py  text_processor.py  video_processor.py  whisper_align.py
scripts/: compare_models.py  setup_models.py  tts_comparison.py
telegram_bot/: bot.py
tts/: aws_poly.py
uploaders/: README.md  __init__.py  base_uploader.py  setup_credentials.py  social_media_distributor.py  upload_example.py
uploaders/facebook/: __init__.py  facebook_uploader.py
uploaders/instagram/: __init__.py  instagram_uploader.py
uploaders/tiktok/: __init__.py  tiktok_uploader.py
uploaders/youtube/: __init__.py  youtube_uploader.py
