[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audo-captions"
version = "0.1.0"
description = "Automatically generate styled subtitles and burn them into videos"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Daniel Carmel", email = "danielcarmel6@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "gtts>=2.5.4",
    "openai-whisper>=20240930",
    "pysubs2>=1.6.0",
    "tqdm>=4.66.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "flake8>=5.0.4",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.scripts]
audo-captions = "main:main"
adjust-subtitles = "adjust_subtitles:main"

[tool.hatch.build.targets.wheel]
packages = ["*.py"]
exclude = ["examples"]

[tool.uv]
# uv-specific configuration
pip = { resolution = "highest" }
exclude = ["build"]
requirements-file = "requirements.txt"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
